<resources>
    <string name="app_name">TourApp</string>
    <string name="tab_str_1">Comida</string>
    <string name="tab_str_2">Café</string>
    <string name="tab_str_3">Hoteles</string>
    <string name="tab_str_4">Turismo</string>

    <string name="description_placeholder"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>
    <string name="call">Llamar</string>
    <string name="visit">Visitar</string>
    <string name="no_avaliable">Opción no disponible</string>
    <string name="direction">Dirección</string>
    <string name="visit_later">Visitar más tarde</string>
    <string name="add">Agregar</string>
    <string name="delete">Eliminar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="settigns">Configuración</string>
    <string name="preferences">Preferencias</string>
    <string name="get_notifications">Recibir notificaciones.</string>
    <string name="dark_theme">Tema oscuro.</string>
    <string name="dark_theme_warning">Precaución: Esta opción reiniciará la app.</string>
    <string name="always_vibrate">Vibración para notificaciones.</string>
    <string name="maps_satellite_mode">Mapas en modo satélite.</string>
    <string name="no_places">No se encontraron lugares :c </string>

    <!--Preferences keys-->
    <string name="user_preferences">TOUR_APP_USER_PREFERENCES</string>
    <string name="pref_get_notifications">PREF_SHOW_NOTIFICATIONS</string>
    <string name="pref_keep_me_logged">PREF_KEEP_ME_LOGGED</string>
    <string name="pref_dark_theme">PREF_DARK_THEME</string>
    <string name="pref_force_vibration">PREF_FORCE_VIBRATION</string>
    <string name="pref_maps_satellite_mode">PREF_MAPS_SATELLITE_MODE</string>



    <string name="pref_logout">PREF_LOGOUT</string>

    <string name="added_complete_message">Se ha añadido <b> %1$s </b> a "Visitar más tarde" </string>
    <string name="deleted_complete_message">Se ha eliminado <b> %1$s </b> de "Visitar más tarde" </string>

    <string name="empty_places_message">Parece que aún no agregas lugares.</string>

    <string name="login_user_label">Usuario</string>
    <string name="login_user_password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="keep_me_logged">Mantenerme logueado</string>

    <string name="something_went_wrong">Sucedió un error al tratar de obtener la información.</string>
    <string name="wrong_credentials">Credenciales incorrectas.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
