<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences">

        <SwitchPreference
            android:icon="@drawable/ic_notifications"
            android:defaultValue="true"
            android:key="@string/pref_get_notifications"
            android:title="@string/get_notifications" />

        <SwitchPreference
            android:icon="@drawable/ic_color"
            android:defaultValue="false"
            android:key="@string/pref_dark_theme"
            android:title="@string/dark_theme"
            android:summary="@string/dark_theme_warning"
            />

        <Preference
            android:key="@string/pref_logout"
            android:layout="@layout/button_logout"
            android:title="@string/logout" />
    </PreferenceCategory>
</PreferenceScreen>